# strepitus

./: .gitignore  CLAUDE.md  LICENSE  README.md
crates/strepitus-core/: Cargo.toml
crates/strepitus-core/src/: config.rs  engine.rs  lib.rs  types.rs
crates/strepitus-core/src/audio/: mod.rs
crates/strepitus-core/src/components/: mod.rs
crates/strepitus-core/src/components/combustion/: formulas.rs  interface.rs  logic.rs
crates/strepitus-core/src/components/cooling/: formulas.rs  interface.rs  logic.rs
crates/strepitus-core/src/components/ecu/: formulas.rs  interface.rs  logic.rs
crates/strepitus-core/src/components/exhaust/: formulas.rs  interface.rs  logic.rs
crates/strepitus-core/src/components/friction/: formulas.rs  interface.rs  logic.rs
crates/strepitus-core/src/components/heat_transfer/: formulas.rs  interface.rs  logic.rs
crates/strepitus-core/src/components/intake/: formulas.rs  interface.rs  logic.rs  mod.rs
crates/strepitus-core/src/components/kinematics/: formulas.rs  interface.rs  logic.rs
crates/strepitus-core/src/components/lubrication/: formulas.rs  interface.rs  logic.rs
crates/strepitus-core/src/components/valve_train/: formulas.rs  interface.rs  logic.rs
crates/strepitus-core/src/engine/: config.rs  crankshaft.rs  cylinder.rs  mod.rs  valve.rs
crates/strepitus-core/src/physics/: friction.rs  heat.rs  kinematics.rs  mod.rs  thermo.rs
research-simulation/: 00-overview.md  01-combustion-chamber.md  02-piston-assembly.md  03-connecting-rod.md  04-crankshaft-flywheel.md  05-valve-train.md  06-intake-system.md  07-fuel-system.md  (+10 more)
(+66 files in other folders)
